conformance/base/admin_network_policy/core-gress-rules-combined.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: gress-rules
spec:
  priority: 15
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  egress:
  - name: "allow-to-ravenclaw-everything"
    action: "Allow"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-to-ravenclaw-everything"
    action: "Deny"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-to-ravenclaw-everything"
    action: "Pass"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-to-slytherin-at-ports-80-53-9003"
    action: "Deny"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "pass-to-slytherin-at-port-80-53-9003"
    action: "Pass"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "allow-to-hufflepuff-at-ports-8080-5353"
    action: "Allow"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-to-hufflepuff-everything-else"
    action: "Deny"
    to:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  - name: "allow-to-dumbledore-at-tcp-udp-sctp"
    action: "Allow"
    to:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-to-dumbledore-everything-else"
    action: "Deny"
    to:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
  - name: "deny-to-quirrell-at-tcp-udp-sctp"
    action: "Deny"
    to:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-quirrell-0
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
  ingress:
  - name: "allow-from-ravenclaw-everything"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-ravenclaw-everything"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-from-ravenclaw-everything"
    action: "Pass"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-slytherin-at-port-80-53-9003"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "pass-from-slytherin-at-port-80-53-9003"
    action: "Pass"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 53
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "allow-from-hufflepuff-at-port-80-5353-9003"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    ports:
      - portNumber:
          protocol: TCP
          port: 80
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-from-hufflepuff-everything-else"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  - name: "allow-from-dumbledore-at-tcp-udp-sctp"
    action: "Allow"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-from-dumbledore-everything-else"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
  - name: "deny-from-quirrell-at-tcp-udp-sctp"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-quirrell-0
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
      - portNumber:
          protocol: UDP
          port: 5353
      - portNumber:
          protocol: SCTP
          port: 9003
