conformance/base/admin_network_policy/core-ingress-sctp-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: ingress-sctp
spec:
  priority: 5
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  ingress:
  - name: "allow-from-gryffindor-everything"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "deny-from-gryffindor-everything"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "pass-from-gryffindor-everything"
    action: "Pass"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "deny-from-slytherin-at-port-9003"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "pass-from-slytherin-at-port-9003"
    action: "Pass"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "allow-from-hufflepuff-at-port-9003"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    ports:
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-from-hufflepuff-everything-else"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  - name: "deny-from-professor-quirrell-at-ports-9003"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-quirrell-0
    ports:
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "allow-from-professor-dumbledore-at-ports-9003"
    action: "Allow"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
    ports:
      - portNumber:
          protocol: SCTP
          port: 9003
  - name: "deny-from-dumbledore-everything-else"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
