conformance/base/admin_network_policy/core-ingress-tcp-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: ingress-tcp
spec:
  priority: 3
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  ingress:
  - name: "allow-from-ravenclaw-everything"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-ravenclaw-everything"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-from-ravenclaw-everything"
    action: "Pass"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-slytherin-at-port-80"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
  - name: "pass-from-slytherin-at-port-80"
    action: "Pass"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: TCP
          port: 80
  - name: "allow-from-hufflepuff-at-port-80"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
    ports:
      - portNumber:
          protocol: TCP
          port: 80
  - name: "deny-from-hufflepuff-everything-else"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  - name: "deny-from-professor-quirrell-at-port-8080"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-quirrell-0
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
  - name: "allow-from-professor-dumbledore-at-port-8080"
    action: "Allow"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
    ports:
      - portNumber:
          protocol: TCP
          port: 8080
  - name: "deny-from-dumbledore-everything-else"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
