conformance/base/admin_network_policy/core-ingress-udp-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: ingress-udp
spec:
  priority: 4
  subject:
    namespaces:
      matchLabels:
          kubernetes.io/metadata.name: network-policy-conformance-hufflepuff
  ingress:
  - name: "allow-from-ravenclaw-everything"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-ravenclaw-everything"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "pass-from-ravenclaw-everything"
    action: "Pass"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-ravenclaw
  - name: "deny-from-slytherin-at-port-5353"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: UDP
          port: 5353
  - name: "pass-from-slytherin-at-port-5353"
    action: "Pass"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-slytherin
    ports:
      - portNumber:
          protocol: UDP
          port: 5353
  - name: "allow-from-gryffindor-at-port-53"
    action: "Allow"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
    ports:
      - portNumber:
          protocol: UDP
          port: 53
  - name: "deny-from-gryffindor-everything-else"
    action: "Deny"
    from:
    - namespaces:
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network-policy-conformance-gryffindor
  - name: "deny-from-professor-quirrell-port-53"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-quirrell-0
    ports:
      - portNumber:
          protocol: UDP
          port: 53
  - name: "deny-from-professor-quirrell-port-5353"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-quirrell-1
    ports:
      - portNumber:
          protocol: UDP
          port: 5353
  - name: "allow-from-professor-dumbledore-at-ports-53"
    action: "Allow"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
    ports:
      - portNumber:
          protocol: UDP
          port: 53
  - name: "allow-from-professor-dumbledore-at-ports-5353"
    action: "Allow"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-1
    ports:
      - portNumber:
          protocol: UDP
          port: 5353
  - name: "deny-from-dumbledore-everything-else"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-0
  - name: "deny-from-dumbledore-everything-else"
    action: "Deny"
    from:
    - pods:
        namespaces:
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: network-policy-conformance-hogwarts-staff
        podSelector:
          matchLabels:
            statefulset.kubernetes.io/pod-name: professor-dumbledore-1
