conformance/base/admin_network_policy/extended-egress-selector-rules.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: node-and-cidr-as-peers-example
spec:
  priority: 75
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          conformance-house: gryffindor
      podSelector:
        matchLabels:
          conformance-house: gryffindor
  egress:
  - name: "allow-egress-to-36363-on-nodes"
    action: "Allow"
    to:
    - nodes:
        matchLabels:
          kubernetes.io/os: linux
    ports:
      - portNumber:
          protocol: TCP
          port: 36363
  - name: "pass-egress-to-5353-on-nodes"
    action: "Pass"
    to:
    - nodes:
        matchLabels:
          kubernetes.io/os: linux
    ports:
      - portNumber:
          protocol: UDP
          port: 34345
  - name: "deny-egress-to-slytherin-and-nodes-and-internet"
    action: "Deny"
    to:
    - pods:
        namespaceSelector:
          matchLabels:
            conformance-house: slytherin
        podSelector:
          matchLabels:
            conformance-house: slytherin
    - nodes:
        matchLabels:
          kubernetes.io/os: linux
    - networks:
        - 0.0.0.0/0
        - ::/0
